Big Update. More content added + labels + minor content chanegs
- In header changed how <p> displays props message because it fits assignment requirements better
- Added a footer with displays the copyright with the props message
- added to-do list and removed the orignal render code and replaced it with the code on line 61. It takes all our components from the <App /> component and renders it as a single component. Optimized and better
- Added to-Do list component (in progress)
-added App component (as mentioned earlier)

--- a/index.html
+++ b/index.html
@@ -15,20 +15,53 @@
     <div id="root"></div>
 
     <script type="text/babel">
-    function Header(props) {
 
-        return (
-            <header>
-                <h1>{props.title}</h1>
-                <p>Welcome to the page to save the enviroment, {props.message}</p>
-            </header>
+        //----Header ----------->
+        function Header(props) {
+
+            return (
+                <header>
+                    <h1>{props.title}</h1>
+                    <p>{props.message}</p>
+                </header>
+            );
+        }
+
+        //----Footer----->
+        function Footer(props) {
+
+            return (
+                <footer>
+                    <p>{props.message}</p>
+                </footer>
+            );
+        }
+
+        //----To Do List--------->
+        function Todolist(props) {
+
+            return (
+                <section>
+
+                </section>
+            );
+        }
+
+        //-------App ---------->
+        // Brings everything together
+        function App() {
+            return (
+                <div>
+                    <Header title="Save The Planet" message="Let's Save The Whales! " />
+                    <Footer message="Copyright © 2023 My Website. All rights reserved." />
+                </div>
+            );
+        }
+
+        ReactDOM.render(
+            <App />,
+            document.getElementById("root")
         )
-    }
-
-    ReactDOM.render(
-        <Header title="Save The Planet" message="Morgan" />,
-        document.getElementById("root")
-    )
     </script>
 
 </body>
