--- a/index.html
+++ b/index.html
@@ -73,6 +73,17 @@
             );
         }
 
+        //----Card---------->
+        function Card(props) {
+            return (
+                <section>
+                    <h2>{props.title}</h2>
+                    <h3>{props.subtitle}</h3>
+                    <p>{props.content}</p>
+                    <img height= {200} src={props.image}/>
+                </section>
+            )
+        }
         //-------App ---------->
         // Brings all components together
         function App() {
@@ -80,6 +91,7 @@
                 <div>
                     <Header title="Save The Planet" message="Let's Save The Whales! " />
                     <Todolist toDos={toDoObjects} />
+                    <Card title= "Hot Girl Shit" subtitle= "Rupaul" content= "hi" image ="https://cdn.pixabay.com/photo/2023/02/14/18/55/flowers-7790227_960_720.jpg"/>
                     <Footer message="Copyright © 2023 My Website. All rights reserved." />
                 </div>
             );
